<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_Programs" Id="{5ccd3d6c-88ac-4679-a520-ede780ab1ad1}">
    <Declaration><![CDATA[{attribute 'to_string'}
TYPE E_Programs :
(
	
	eNull		:=0,
	eHomeAll	:=1,
	eHomeX		:=2,
	eHomeY		:=3,
	eHomeZ		:=4
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>