<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_HMI_In" Id="{00e1f3e5-dcaa-4395-83d0-f9d2a4f4c93d}">
    <Declaration><![CDATA[TYPE ST_HMI_In :
STRUCT
    
// Input functions from the HMI

bZeroX          : BOOL;
bZeroY          : BOOL;
bZeroZ          : BOOL;
bZeroAllAxes    : BOOL;

ProgramCall	: E_Programs;
bTriggerProgramCall : BOOL;

// User Speed/Override Settings

fChannelOverride            : REAL;

// User Program Select

sPrgName         : STRING[255];

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>